--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-HELP.md
+sarafan/HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+package-lock.json
 
 ### STS ###
 .apt_generated
@@ -25,6 +26,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+node_modules/
 
 ### NetBeans ###
 /nbproject/private/
@@ -35,3 +37,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Yarn ###
+yarn-error.log
+yarn.lock
+
