--- a/sarafan/build.gradle
+++ b/sarafan/build.gradle
@@ -1,12 +1,14 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.11.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+	id 'org.springframework.boot' version '2.2.6.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 }
 
-group = 'letsode'
+
+group = 'letscode'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '1.8'
+
 
 configurations {
 	developmentOnly
@@ -15,18 +17,30 @@ configurations {
 	}
 }
 
+
 repositories {
 	mavenCentral()
 }
 
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.postgresql:postgresql'
+	implementation 'org.projectlombok:lombok'
+	implementation 'javax.xml.bind:jaxb-api'
+	compile('org.springframework.session:spring-session-jdbc')
+	compile('org.springframework.boot:spring-boot-starter-security')
+	compile("org.springframework.boot:spring-boot-starter-websocket")
+	compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.0.RELEASE')
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
 
+
 test {
 	useJUnitPlatform()
 }
+
