--- a/sarafan/build.gradle
+++ b/sarafan/build.gradle
@@ -29,11 +29,11 @@ dependencies {
 	implementation 'org.postgresql:postgresql'
 	implementation 'org.projectlombok:lombok'
 	implementation 'javax.xml.bind:jaxb-api'
-	compile('org.springframework.session:spring-session-jdbc')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile("org.springframework.boot:spring-boot-starter-websocket")
 	compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.0.RELEASE')
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+	compile 'org.jsoup:jsoup:1.11.3'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
